sumo/tests/sumo/errors/routes/emptyroute_newstyle_plainemission/errors.sumo
Error: Attribute 'edges' in definition of route '!0' is empty.
Error: Vehicle's '0' route has no edges.
Quitting (on error).
